# noonchi-translator

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  process_notes.md  pyproject.toml
backend/: check_installation.py  requirements.txt
backend-agent/: config.py  requirements.txt  session_manager.py  test_api.py
backend-agent/agents/: __init__.py
backend/api/: app.py  config.py  requirements.txt  session_manager.py
backend/api/agents/: claude_agent.py  mbart_agent.py
backend/api/models/: schemas.py
backend/api/rag/: knowledge_base.py  retriever.py
backend/data_pipeline/: __init__.py  augment.py  check_labels.py  check_naturalness.py  extract.py  filter.py  label.py  merge_llm.py  pipeline.py  split.py
backend/evaluation/: __init__.py  eval_context_parsing.py  metrics.py
backend/formality/: __init__.py  resolver.py
backend/model/: __init__.py  dataset.py  evaluate.py  inference.py  train.py
backend/nlp/: day1_tokenization_lab.py  day4_lab.py  day5_en-kr.py  day5_lab.py  en-kr_manual.ipynb  korean_postags_info.py
data/: relationship_formality_map.json
docs/: ARCHITECTURE_DECISION.md  IMPLEMENTATION_PLAN.md  TRAINING_RESULTS.md  code_review.md  data_improvements.md  review_2026_06_01.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/components/: FormalityBadge.jsx
frontend/src/config/: backends.js
frontend/src/services/: api.js
notebooks/: train_colab.ipynb
tests/: test_api.py  test_data_pipeline.py  test_formality_resolver.py
(+1 files in other folders)
