[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "noonchi-translator"
version = "0.1.0"
description = "Context-aware English-to-Korean translation with formality conditioning"
requires-python = ">=3.9"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.flake8]
max-line-length = 100
exclude = ["noonchi-venv", "frontend/node_modules", ".git"]
